feat: add swagger for change password
